--- a/styles/all.css
+++ b/styles/all.css
@@ -442,6 +442,10 @@ img {
     margin-bottom: 30px;
   }
 
+  .list-group-title {
+    width: 375px;
+  }
+
   .list-group-item {
     width: 375px;
   }
