fix: 修正卡片群組與分頁的距離

--- a/styles/all.css
+++ b/styles/all.css
@@ -456,6 +456,7 @@ img {
         -ms-flex-direction: column;
             flex-direction: column;
     width: 375px;
+    margin-bottom: 0;
   }
 
   .card {
