--- a/src/all.scss
+++ b/src/all.scss
@@ -235,7 +235,16 @@
     text-align: center;
 
     li {
-      margin-bottom: 5px;
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+
+      &:hover {
+        background-color: $secondary;
+      }
+    }
+
+    a {
+      pointer-events: none;
     }
   }
 
