fix: 修正購物車按鈕垂直置中

--- a/src/all.scss
+++ b/src/all.scss
@@ -27,10 +27,11 @@
 }
 
 .shopping-cart {
-  display: flex;
-  align-items: center;
-
   margin-left: 19px;
+
+  img {
+    vertical-align: bottom;
+  }
 }
 
 .banner {
