feat: 新增漢堡動畫

--- a/src/all.scss
+++ b/src/all.scss
@@ -295,3 +295,20 @@
     justify-content: center;
   }
 }
+
+@keyframes scaleUp {
+  from {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes scaleDown {
+  to {
+    transform: scale(0);
+  }
+}
