--- a/src/all.scss
+++ b/src/all.scss
@@ -205,7 +205,7 @@
     height: 12px;
   }
 
-  .logo {
+  .logo-link {
     display: none;
   }
 
@@ -214,6 +214,10 @@
 
     width: 114px;
     height: 18px;
+  }
+
+  .shopping-cart {
+    margin-left: 0;
   }
 
   header.mb-2 {
