fix: 增加使用者點擊範圍
.nav-item 的 padding 設定可移到子層 a 標籤並加上 display: block，增加使用者點擊範圍

--- a/src/all.scss
+++ b/src/all.scss
@@ -22,13 +22,21 @@
 }
 
 .nav-item {
-  padding-right: 60px;
-
   line-height: 73px;
+
+  a {
+    display: block;
+    padding-right: 30px;
+    padding-left: 30px;
+  }
+
+  a:hover {
+    background-color: $secondary;
+  }
 }
 
 .shopping-cart {
-  margin-left: 19px;
+  margin-left: 50px;
 
   img {
     vertical-align: bottom;
