fix: 加上 hover 效果
頂部選單、左側甜點類別選單、加入購物車按鈕等有使用到 a 標籤的部分都建議加上 hover 系果，提升使用者體驗

--- a/src/all.scss
+++ b/src/all.scss
@@ -82,6 +82,10 @@
 
   cursor: pointer;
 
+  &:hover {
+    background-color: $secondary;
+  }
+
   &.active {
     background-color: $secondary;
   }
@@ -151,6 +155,11 @@
   background-color: $secondary;
 
   cursor: pointer;
+
+  &:hover {
+    background-color: $primary;
+    color: #fff;
+  }
 }
 
 .badges {
