--- a/src/all.scss
+++ b/src/all.scss
@@ -279,12 +279,11 @@
     margin-right: 0;
     margin-bottom: 30px;
   }
-
-  .list-group-title {
+  .list-group {
     width: 375px;
   }
 
-  .list-group-item {
+  .list-group-title {
     width: 375px;
   }
 
