--- a/styles/all.css
+++ b/styles/all.css
@@ -501,11 +501,11 @@ img {
     margin-bottom: 30px;
   }
 
-  .list-group-title {
+  .list-group {
     width: 375px;
   }
 
-  .list-group-item {
+  .list-group-title {
     width: 375px;
   }
 
