--- a/src/all.scss
+++ b/src/all.scss
@@ -5,320 +5,4 @@
 @import 'base.scss';
 @import 'animation.scss';
 
-.logo {
-  height: 40px;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  height: 40px;
-
-  ul {
-    margin-left: auto;
-  }
-}
-
-.nav-item {
-  line-height: 73px;
-
-  a {
-    display: block;
-    padding-right: 30px;
-    padding-left: 30px;
-  }
-
-  a:hover {
-    background-color: $secondary;
-  }
-}
-
-.shopping-cart {
-  margin-left: 50px;
-
-  img {
-    vertical-align: bottom;
-  }
-}
-
-.banner {
-  object-fit: cover;
-  object-position: center center;
-}
-
-.list-group {
-  width: 300px;
-}
-
-.list-group-title {
-  border: 1px solid #eaf0ed;
-
-  height: 65px;
-
-  padding-top: 15px;
-  padding-bottom: 15px;
-
-  text-align: center;
-  font-size: 1.5rem;
-  line-height: 40px;
-  color: white;
-
-  background-color: $primary;
-}
-
-.list-group-item {
-  border: 1px solid #eaf0ed;
-
-  padding-top: 15px;
-  padding-bottom: 15px;
-
-  text-align: center;
-  font-size: 1.5rem;
-  line-height: 40px;
-
-  cursor: pointer;
-
-  &:hover {
-    background-color: $secondary;
-  }
-
-  &.active {
-    background-color: $secondary;
-  }
-
-  a {
-    pointer-events: none;
-  }
-}
-
-.card-group {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-
-  width: 620px;
-}
-
-.card {
-  display: flex;
-  flex-direction: column;
-
-  position: relative;
-}
-
-.card-body {
-  display: flex;
-
-  text-align: center;
-  color: $primary;
-  font-size: 1.25rem;
-}
-
-.card-title {
-  width: 173px;
-
-  padding-top: 17px;
-  padding-bottom: 17px;
-
-  border: 1px solid $secondary;
-
-  font-weight: 300;
-}
-
-.card-text {
-  width: 127px;
-
-  padding-top: 14px;
-  padding-bottom: 14px;
-
-  border: 1px solid $secondary;
-}
-
-.card-button {
-  width: 100%;
-  height: 65px;
-
-  padding-top: 16px;
-  padding-bottom: 16px;
-
-  border: 1px solid $secondary;
-
-  text-align: center;
-  font-size: 1.5rem;
-
-  background-color: $secondary;
-
-  cursor: pointer;
-
-  &:hover {
-    background-color: $primary;
-    color: #fff;
-  }
-}
-
-.badges {
-  position: absolute;
-  top: 0;
-  left: 20px;
-  width: 36px;
-  height: 107px;
-
-  -webkit-writing-mode: vertical-lr;
-  writing-mode: vertical-lr;
-  color: white;
-  text-align: center;
-  letter-spacing: 5px;
-
-  background-color: $primary;
-
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.favorite {
-  position: absolute;
-  top: 19px;
-  right: 22px;
-}
-
-.page-item {
-  border: 1px solid $secondary;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  width: 60px;
-
-  font-size: 1.25rem;
-
-  &.active {
-    background-color: $primary;
-
-    a {
-      color: white;
-    }
-  }
-
-  a {
-    display: block;
-
-    width: 100%;
-
-    text-align: center;
-
-    padding-top: 19px;
-    padding-bottom: 19px;
-  }
-}
-
-@media screen and (max-width: 992px) {
-  .container {
-    max-width: 375px;
-  }
-
-  .menu {
-    display: inline-block;
-
-    cursor: pointer;
-
-    width: 18px;
-    height: 12px;
-  }
-
-  .logo-link {
-    display: none;
-  }
-
-  .logo-mb {
-    display: inline-block;
-
-    width: 114px;
-    height: 18px;
-  }
-
-  .shopping-cart {
-    margin-left: 0;
-  }
-
-  header.mb-2 {
-    margin-bottom: 0;
-  }
-
-  .nav {
-    margin-left: 30px;
-    margin-right: 30px;
-
-    ul {
-      display: none;
-    }
-  }
-
-  .nav-bar {
-    &.active {
-      display: block;
-    }
-
-    text-align: center;
-
-    li {
-      padding-top: 1rem;
-      padding-bottom: 1rem;
-
-      &:hover {
-        background-color: $secondary;
-      }
-    }
-
-    a {
-      pointer-events: none;
-    }
-  }
-
-  main.d-flex {
-    flex-direction: column;
-  }
-
-  nav.mr-0 {
-    margin-right: 0;
-    margin-bottom: 30px;
-  }
-  .list-group {
-    width: 375px;
-  }
-
-  .list-group-title {
-    width: 375px;
-  }
-
-  .card-group {
-    flex-direction: column;
-
-    width: 375px;
-
-    margin-bottom: 0;
-  }
-
-  .card {
-    width: 315px;
-
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 30px;
-  }
-
-  .card-title {
-    width: 183px;
-  }
-
-  .card-text {
-    width: 132px;
-  }
-
-  .pagination {
-    width: 100%;
-    justify-content: center;
-  }
-}
+@import 'index.scss';
